8.1.3
- Fix: Obtain streaming profiles as soon as connected to backend
- Fix: On system sleep, properly close demuxers before disconnecting from backend
- Fix: Predictive Tuning: Prevent closing the subscription while re-subscribing to it
- Fix: Error handling for socket read/write operations

8.1.2
- More IPv6 fixes

8.1.1
- Fix IPv6 support

8.1.0
- Update inputstream API 3.0.1
  - Fix wrong flags bit shift

8.0.0
- Update PVR API 7.0.2

7.2.2
- Fix toggling of HTTP streaming setting

7.2.1
- Fix 'pvr.hts' appearing twice in every addon log message
- Fix calculation of start time, stop time and file size for multi-file recordings
- Remove p8-platform build dependency

7.2.0
- Add capability to use HTTP streaming instead of HTSP

7.1.4
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)
- Refactor subscription seek code
- Refactor subscription weight code
- Fix HTSP connection thread not ended while in supended state

7.1.3
- Withdraw v7.1.2 due to new deadlocks it introduces, for example during initial connect to backend.

7.1.2
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)

7.1.1
- Fix 'provider name' and 'device status' signal status values after update to PVR API 7.0.0

7.1.0
- Add new setting value for recordings lifetime of timers created by Kodi: 'Use backend setting"
- Change default value for 'lifetime' setting from '3 months' to 'Use backend setting' to
  avoid unintended loss of data
- Enforce reset of default value for lifetime' to 'Use backend setting' to avoid unintended loss
  of data for existing addon configurations

7.0.1
- Fix hang during addon stop

7.0.0
- Update PVR API 7.0.0
- Rework addon to support new API interface
- Code cleanup to match a clang format
- Change settings.xml to new Kodi format

6.1.1
- fix disconnect on sleep

6.1.0
- Add wake-on-lan

6.0.0
- Update PVR API 6.5.1
- Update Global API 1.2.0

5.5.0